--- a/content/resources/css/mark-all-as-read.css
+++ b/content/resources/css/mark-all-as-read.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
+
 .ft-mark-all-as-read {
 	background: url("chrome://foxtrick/content/resources/img/tick2.png") no-repeat scroll 50% 50% transparent;
 	cursor: pointer;
@@ -13,4 +15,10 @@ html[dir="ltr"] .ft-mark-all-as-read {
 html[dir="rtl"] .ft-mark-all-as-read {
 	margin: 0 2px 0 7px;
 	float: left;
+}
+
+.forumTabs a {
+	padding: 2px 3px !important;
+}
+
 }
