"overflow: hidden" for mymonitor sidebar box in case select text is too long to fit
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7271 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -228,3 +228,7 @@ html[data-theme="simple"] .transferPlayerInformation {
 html[data-theme="simple"] #ctl00_ctl00_CPContent_CPMain_UpdatePanelLiveLeagueTable {
 	white-space: nowrap;
 }
+
+#ft-monitor-sidebar-box {
+	overflow: hidden;
+}
