bringing back match event alignment
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7333 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-player-colouring.css
+++ b/content/resources/css/match-player-colouring.css
@@ -16,3 +16,11 @@
 
 .ft-match-player-mine {
 }
+
+.ft-match-event-home > td {
+	text-align: left !important;
+}
+
+.ft-match-event-away > td  {
+	text-align: right !important;
+}
