match-player-coloring: tweaked alignment
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7335 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-player-colouring.css
+++ b/content/resources/css/match-player-colouring.css
@@ -17,10 +17,10 @@
 .ft-match-player-mine {
 }
 
-.ft-match-event-home > td {
+.ft-match-event-home > td:first-child {
 	text-align: left !important;
 }
 
-.ft-match-event-away > td  {
+.ft-match-event-away > td:first-child   {
 	text-align: right !important;
 }
