skill-number: make some space for long skill names
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7343 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/skillcolors/skill-number.css
+++ b/content/resources/skillcolors/skill-number.css
@@ -1,5 +1,8 @@
 /* CSS Document  by baumanns */
 
+/* make space for long skills names */
+div.playerInfo table.thin  td {padding-right: 5px !important;}
+
 a[href*="#skill"] {white-space:nowrap;}
 
 /* SKILL NUMBERS */
