--- a/content/resources/css/forum-youth-icons.css
+++ b/content/resources/css/forum-youth-icons.css
@@ -7,6 +7,18 @@
 	cursor:pointer;
 }
 
+.HTMLToolbar > div:first-child {
+	background-color: #D0D0D0;
+	margin-bottom :3px;
+	text-align: center;
+}
+
+.HTMLToolbar img {
+	margin: 2px;
+	width: 22px; 
+	height: 22px;
+}
+
 /* main tool bar */
 .HTMLToolbar img.ft_q {
 	background: url('chrome://foxtrick/content/resources/img/ht-ml/format_q.png') no-repeat scroll 0 0 transparent;
