match-order-display-ratings-bellow.css: more space at the bottom
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7636 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-order-display-ratings-bellow.css
+++ b/content/resources/css/match-order-display-ratings-bellow.css
@@ -1,5 +1,5 @@
 #fieldOverlay {
-	height: 370px;
+	height: 420px;
 	position: relative;
 	top: 530px !important;
 }
@@ -10,4 +10,8 @@
 
 .visible {
 	visibility: visible !important;
+}
+
+#fieldOverlay input {
+	bottom: 40px !important;
 }
