match-order: show specialties (optional, default on).
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7641 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-order.css
+++ b/content/resources/css/match-order.css
@@ -1,4 +1,25 @@
+/*played last highlighting*/
 .playedLast {
-	border-right : 5px solid #48f;
+	border-right : 4px solid #48f;
+	padding: 3px 25px 3px 2px !important;
+}
+
+.playedOther, .playedSecondLast {
+	border-right : 4px solid transparent;
 	padding: 3px 9px 3px 2px !important;
+}
+
+#orders #players .player .cards_health {
+	right: 1px !important;
+}
+
+
+/* interface size */
+#order_tabs {
+	margin-left: -10px;
+}
+
+#list {
+	margin-right: -10px;
+	width: 150px;
 }
