match-order-show-specialties: prevent shown twice, show after changes and fix size for subs
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7642 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-order-show-specialties.css
+++ b/content/resources/css/match-order-show-specialties.css
@@ -26,3 +26,11 @@
 .p19, .p20 {
 	top: 425px !important;
 }
+
+#orders .substitution {
+	min-height: 100px !important;
+}
+
+.substitution .advanced {
+	margin: 40px 0 0 2px !important;
+}
