Lineup prediction user-content-example
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7651 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/user-content-example.css
+++ b/content/resources/css/user-content-example.css
@@ -300,3 +300,16 @@ font-weight: bold !important;
 color: blue !important;
 font-weight: bold !important;
 }
+
+/* Lineup prediction*/
+
+div#ft-full-level0 span,
+div#ft-full-level1 span,
+div#ft-full-level2 span,
+div#ft-full-level3 span,
+div#ft-full-level4 span,
+div#ft-full-level5 span,
+div#ft-full-level6 span  {
+background: none repeat scroll 0 0 white !important; 
+font-weight: bold !important;
+}  
