--- a/content/resources/css/mark-all-as-read.css
+++ b/content/resources/css/mark-all-as-read.css
@@ -1,6 +1,6 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
-.ft-mark-all-as-read {
+.ft-mark-all-as-read  {
 	background: url("chrome://foxtrick/content/resources/img/tick2.png") no-repeat scroll 50% 50% transparent;
 	cursor: pointer;
 	height: 16px;
@@ -9,10 +9,16 @@
 	margin-bottom: 4px;
 }
 
-html[dir="ltr"] .ft-mark-all-as-read {
+html[data-theme="standard"] .ft-mark-all-as-read {
+	position: relative;
+	top : -2px;
+	right :7px;
+}
+
+html[dir="ltr"] .ft-mark-all-as-read  {
 	float: right;
 }
-html[dir="rtl"] .ft-mark-all-as-read {
+html[dir="rtl"] .ft-mark-all-as-read  {
 	float: left;
 }
 
