match-order: simple flip orders fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7672 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-order.css
+++ b/content/resources/css/match-order.css
@@ -137,6 +137,7 @@ html[dir="ltr"] #order_tabs {
 	font-weight: normal !important;
 }
 .overlayRightDefense, .overlayMidDefense, .overlayLeftDefense {
+	top: 9px !important;
 }
 .overlayMidfield {
 	top: 160px !important;
@@ -162,3 +163,9 @@ html[dir="ltr"] .overlayMidDefense, .overlayMidAttack {
 #tacticLevelLabel {
 	top: 470px !important;
 }
+
+#fieldOverlay {
+        height: 520px;
+		top: 630px 
+}
+
