match-report-format.js: add line-up section.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7680 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-report.css
+++ b/content/resources/css/match-report.css
@@ -2,6 +2,16 @@
  * non-table way.
  */
 
+.ft-match-lineup li {
+	padding-bottom: 2px !important;
+	border-bottom: 1px solid #eee;
+}
+
+.ft-match-lineup a {
+	text-decoration: none !important;
+	color: #006db5 !important;
+}
+
 .ft-match-report {
 	border-spacing: 0 5px;
 }
