--- a/content/resources/css/popup-links.css
+++ b/content/resources/css/popup-links.css
@@ -63,6 +63,11 @@ ul.ft-popup-list > li:hover {
 div.cfMessage, div.edited, div.cfHeader, div.feedItem, div.cfUserInfo, div.signature, div.playerInfo, .alert {
 	overflow: visible !important;
 }
+
+.HTMLToolbar  .alert {
+	overflow: hidden !important;
+}
+
 div.message {
 	overflow:auto;
 }
