--- a/content/resources/css/ht-thread.css
+++ b/content/resources/css/ht-thread.css
@@ -1,3 +1,12 @@
-.ft-ht-thread {
-	border-bottom: 1px solid #ff7a7a;
+.ft-ht-thread1 {
+	border-bottom: 2px solid #ff7a7a;
+}
+
+.ft-ht-thread2 {
+	border: 2px solid #ff7a7a;
+}
+
+.ft-ht-thread0 {
+	border-left: 5px solid #ff7a7a;
+	padding-left: 5px;
 }
