--- a/content/resources/css/ht-thread.css
+++ b/content/resources/css/ht-thread.css
@@ -1,3 +1,8 @@
+.ft-ht-thread0 {
+	border-left: 5px solid #ff7a7a;
+	padding-left: 5px;
+}
+
 .ft-ht-thread1 {
 	border-bottom: 2px solid #ff7a7a;
 }
@@ -6,7 +11,10 @@
 	border: 2px solid #ff7a7a;
 }
 
-.ft-ht-thread0 {
-	border-left: 5px solid #ff7a7a;
-	padding-left: 5px;
+.ft-ht-thread3 {
+	border: 1px solid #ff7a7a;
+}
+
+.ft-ht-thread4 {
+	background-color: #849D84;
 }
