ht-thread-marker.js: new style.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7722 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/ht-thread.css
+++ b/content/resources/css/ht-thread.css
@@ -18,3 +18,9 @@
 .ft-ht-thread4 {
 	background-color: #849D84;
 }
+
+.ft-ht-thread5:before {
+	content: "HT: ";
+	color: #ff7a7a;
+	font-weight: bold;
+}
