ht-thread: moved HT- from div to the link
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7723 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/ht-thread.css
+++ b/content/resources/css/ht-thread.css
@@ -19,7 +19,7 @@
 	background-color: #849D84;
 }
 
-.ft-ht-thread5:before {
+.ft-ht-thread5 a:before {
 	content: "HT: ";
 	color: #ff7a7a;
 	font-weight: bold;
