--- a/content/resources/css/match-order.css
+++ b/content/resources/css/match-order.css
@@ -7,11 +7,11 @@ html[dir="ltr"] .playedLast {
 	border-right : 4px solid #48f;
 	padding: 3px 25px 3px 2px !important;
 }
-html[dir="rtl"] .playedOther, .playedSecondLast {
+html[dir="rtl"] .playedOther, html[dir="rtl"] .playedSecondLast {
 	border-left : 4px solid transparent !important;
 	padding: 3px 2px 3px 9px !important;
 }
-html[dir="ltr"] .playedOther, .playedSecondLast {
+html[dir="ltr"] .playedOther, html[dir="ltr"] .playedSecondLast {
 	border-right : 4px solid transparent;
 	padding: 3px 9px 3px 2px !important;
 }
