match-report-format.js: add substitutions in lineup.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7727 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-report.css
+++ b/content/resources/css/match-report.css
@@ -12,6 +12,18 @@
 	color: #006db5 !important;
 }
 
+.ft-match-lineup-comment:before {
+	content: "(";
+}
+
+.ft-match-lineup-comment {
+	padding-left: 3px;
+}
+
+.ft-match-lineup-comment:after {
+	content: ")";
+}
+
 .ft-match-report {
 	border-spacing: 0 5px;
 }
