--- a/content/resources/css/match-order-specialties.css
+++ b/content/resources/css/match-order-specialties.css
@@ -1,20 +1,12 @@
-/* specialties in list on thr right with cards */
-#list img.specialty {
-	float:right; 
-	margin: 0 2px;
-}
-
-
 /* increase height of playerboxes for cards+specialties */
 #orders .position, #orders .position .player, .player.ui-draggable-dragging {
-	height: 52px !important;
-
-	}
+	height: 49px !important;
+}
 
 /* show previously hidden cards on the bottom */
 #orders #field .player .cards_health {
 	display: block !important;
-	top: 38px;
+	top: 36px;
 	width: 80px;
 	position: relative;
 }
@@ -24,14 +16,25 @@
 html[dir="rtl"] #orders #field .player .cards_health {
 	right:6px;
 }
+html[dir="rtl"] #orders #field .player .cards_health  img.specialty {
+	float:left;
+}
 html[dir="ltr"] #orders #field .player .cards_health {
 	left:6px;
 }
-html[dir="rtl"] #fieldplayers img.specialty {
+html[dir="ltr"] #orders #field .player .cards_health  img.specialty {
+	float:right;
+}
+
+/* specialties in list on the right with cards */
+#field #list img.specialty {
+	margin: 0 2px;
+}
+html[dir="rtl"] #field #list img.specialty {
 	float:left; 
 	margin: 0 2px;
 }
-html[dir="ltr"] #fieldplayers img.specialty {
+html[dir="ltr"] #field #list img.specialty {
 	float:right; 
 	margin: 0 2px;
 }
@@ -39,7 +42,7 @@ html[dir="ltr"] #fieldplayers img.specialty {
 
 /* name and pos_abbr has to move up */
 #orders .position .player .name, .player.ui-draggable-dragging .name {
-	bottom: 14px !important;
+	bottom: 13px !important;
 }
 #orders .pos_abbr {
 	top: 10px;
