header-toggle: fixed my-monitor and hiding ugly archieve icon
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7734 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/my-monitor.css
+++ b/content/resources/css/my-monitor.css
@@ -57,6 +57,6 @@
 }
 
 /* hide header-toggle icon  */
-div.ft-monitor-container div.ft-monitor-frame h2.ft-contractable-header {
+#ft-monitor-container div.ft-monitor-frame h2.ft-contractable-header {
 	background-image: none;
 }
