header-toggle.css: copy-ratings link moved
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7736 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/header-toggle.css
+++ b/content/resources/css/header-toggle.css
@@ -1,3 +1,16 @@
+/* fixing toggle icon interferences */
+
+/* kicking ht archieve icon */
 #ctl00_ctl00_CPContent_CPMain_lnkArchive  img.archiveLinkIcon {
 	background-image: none !important;
+}
+
+/* copy-ratings */
+h2.ft-expander-expanded span.ft_copy_rating {
+	margin-right : 20px;
+}
+
+/* my-monitor */
+#ft-monitor-container div.ft-monitor-frame h2.ft-contractable-header {
+	background-image: none;
 }
