match-order: added swap_positions (on) and stay_on_page (off) options
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7743 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-order.css
+++ b/content/resources/css/match-order.css
@@ -17,12 +17,18 @@ html[dir="ltr"] .playedOther, html[dir="ltr"] .playedSecondLast {
 }
 
 
-/* rating differences highlighting */
-.colorLower {
-	color: red;
-}
-.colorHigher {
-	color: blue;
+
+#swap_positions {
+	background-color: #3f7137; 
+	float: left; 
+	margin-left: 20px; 
+	cursor: pointer; 
+	padding: 6px; 
+	clear: left;
+	position: relative;
+	top: 255px;
+	color: White; 
+	text-decoration: underline; 
 }
 
 
