--- a/content/resources/css/match-simulator.css
+++ b/content/resources/css/match-simulator.css
@@ -8,6 +8,13 @@
 	margin-bottom:2px;
 }
 
+/* rating differences highlighting */
+.colorLower {
+	color: red;
+}
+.colorHigher {
+	color: blue;
+}
 
 /* other teams ratings */
 .otherWrapper{
