match-ratings: copy-ratings link moved left, toggle icon hidden
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7748 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/header-toggle.css
+++ b/content/resources/css/header-toggle.css
@@ -5,12 +5,9 @@
 	background-image: none !important;
 }
 
-/* copy-ratings */
-h2.ft-expander-expanded span.ft_copy_rating {
-	margin-right : 20px;
-}
-
-/* my-monitor */
-#ft-monitor-container div.ft-monitor-frame h2.ft-contractable-header {
+/* removing toggle icon for my-monitor, match ratings */
+#ft-monitor-container div.ft-monitor-frame h2.ft-contractable-header, 
+h2.tblBox.ft-contractable-header
+{
 	background-image: none;
 }
