--- a/content/resources/css/copy-ratings.css
+++ b/content/resources/css/copy-ratings.css
@@ -5,3 +5,10 @@ html[data-theme="standard"] .copyicon.ft-copy-ratings {
 html[data-theme="simple"] .copyicon.ft-copy-ratings {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyMatchRatings_s.png");
 }
+
+
+/* copy ratings */
+span.ft_copy_rating { cursor: pointer; font-weight: normal; text-decoration: underline;}
+table span.ft_copy_rating { float: right; }
+h2.tblBox span.ft_copy_rating { margin-left: 1em; }
+th span.ft_copy_rating { margin-left: 0.2em; }
