--- a/content/resources/css/ht-thread.css
+++ b/content/resources/css/ht-thread.css
@@ -1,25 +1,4 @@
-.ft-ht-thread0 {
-	border-left: 5px solid #ff7a7a;
-	padding-left: 5px;
-}
-
-.ft-ht-thread1 {
-	border-bottom: 2px solid #ff7a7a;
-}
-
-.ft-ht-thread2 {
-	border: 2px solid #ff7a7a;
-}
-
-.ft-ht-thread3 {
-	border: 1px solid #ff7a7a;
-}
-
-.ft-ht-thread4 {
-	background-color: #849D84;
-}
-
-.ft-ht-thread5 a:before {
+.ft-ht-thread a:before {
 	content: "HT: ";
 	color: #ff7a7a;
 	font-weight: bold;
