match-simulator.css: fixed bellow option for FF
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7763 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-simulator.css
+++ b/content/resources/css/match-simulator.css
@@ -130,13 +130,13 @@ html[dir="ltr"] .overlayMidDefense, .overlayMidAttack {
 #fieldOverlay.displayBellow {
 	height: 520px;
 	position: relative;
-	top: 630px;
+	top: 630px !important;
 }
 
 #fieldOverlay.displayRight {
 	height: 520px;
 	position: relative;
-	top: -80px;
+	top: -80px !important;
 }
 html[dir="rtl"] #fieldOverlay.displayRight {
 	right: 775px !important;
