forum-youth-icons: added symbols tag
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7820 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/forum-youth-icons.css
+++ b/content/resources/css/forum-youth-icons.css
@@ -47,6 +47,9 @@
 .HTMLToolbar img.ft_table {
 	background: url('chrome://foxtrick/content/resources/img/ht-ml/format_table.png') no-repeat scroll 0 0 transparent;
 }
+.HTMLToolbar img.ft_symbol {
+	background: url('chrome://foxtrick/content/resources/img/ht-ml/format_symbol.png') no-repeat scroll 0 0 transparent;
+}
 
 /* other toolbar */
 .HTMLToolbar img.f_debug {
