--- a/content/resources/css/header-toggle.css
+++ b/content/resources/css/header-toggle.css
@@ -5,9 +5,14 @@
 	background-image: none !important;
 }
 
-/* removing toggle icon for my-monitor, match ratings */
-#ft-monitor-container div.ft-monitor-frame h2.ft-contractable-header, 
-h2.tblBox.ft-contractable-header
+/* removing toggle icon for my-monitor */
+#ft-monitor-container div.ft-monitor-frame h2.ft-contractable-header
+{
+	background-image: none;
+}
+
+/* removing expander icon match ratings */
+h2.tblBox.ft-expander-expanded
 {
 	background-image: none;
 }
