match-report.css: lineup td align top
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7878 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-report.css
+++ b/content/resources/css/match-report.css
@@ -2,6 +2,10 @@
  * non-table way.
  */
 
+.ft-match-lineup td {
+	vertical-align: top !important;
+}
+
 .ft-match-lineup li {
 	padding-bottom: 2px !important;
 	border-bottom: 1px solid #eee;
