Removed class ft-contractable-header ... couldn't find any usage of it anywhere
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7895 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/header-toggle.css
+++ b/content/resources/css/header-toggle.css
@@ -6,7 +6,7 @@
 }
 
 /* removing toggle icon for my-monitor */
-#ft-monitor-container div.ft-monitor-frame h2.ft-contractable-header
+#ft-monitor-container div.ft-monitor-frame
 {
 	background-image: none;
 }
