--- a/content/resources/css/fixes/Forum_Spoiler_reveal.css
+++ b/content/resources/css/fixes/Forum_Spoiler_reveal.css
@@ -1,10 +1,10 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
-.message .spoiler, .feedItem .spoiler{
+blockquote.spoiler {
     display: none!important;
 }
 
-.message .hidden, .feedItem .hidden {
+blockquote.spoiler.hidden {
     display: block!important;
 }
 
