simple non sup ad fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7906 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/extra-shortcuts.css
+++ b/content/resources/css/extra-shortcuts.css
@@ -25,4 +25,8 @@
 	background-image: url('chrome://foxtrick/content/resources/img/shortcuts/foxtrick.png') !important;
 }
 
+#header a[target="_blank"] img {
+	margin-right: 160px;
+}
+
 }
