mediasports banner fix for rtl and supporter only.
(guess this fixes link bugs recently reported) 

git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7955 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/extra-shortcuts.css
+++ b/content/resources/css/extra-shortcuts.css
@@ -25,8 +25,11 @@
 	background-image: url('chrome://foxtrick/content/resources/img/shortcuts/foxtrick.png') !important;
 }
 
-#header a[target="_blank"] img {
-	margin-right: 160px;
+html[dir="ltr"] #mediasports .mediasports {
+	margin-right: 160px  !important;
+}
+html[dir="rtl"] #mediasports .mediasports {
+	margin-left: 160px  !important;
 }
 
 }
