match-report-format Dispays event specific icons between minute and text.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7956 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-report.css
+++ b/content/resources/css/match-report.css
@@ -42,6 +42,11 @@
 	font-weight: bold;
 }
 
+.ft-match-report-event-icon {
+	display: table-cell;
+	width: 24px;
+}
+
 .ft-match-report-event-content {
 	display: table-cell;
 	padding-left: 10px;
