--- a/content/resources/css/match-report.css
+++ b/content/resources/css/match-report.css
@@ -40,6 +40,7 @@
 	display: table-cell;
 	width: 30px;
 	font-weight: bold;
+	vertical-align: top;
 }
 
 .ft-match-report-event-icon {
@@ -47,9 +48,15 @@
 	width: 24px;
 }
 
+.ft-match-report-event-icon-image {
+	margin-top: 2px;
+	margin-bottom: 2px;
+}
+
 .ft-match-report-event-content {
 	display: table-cell;
 	padding-left: 10px;
+	vertical-align: top;
 }
 
 .ft-match-report-kick-off,
