extra-shortcuts.css : radio popdown tweaked
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8041 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/extra-shortcuts.css
+++ b/content/resources/css/extra-shortcuts.css
@@ -25,6 +25,21 @@
 	background-image: url('chrome://foxtrick/content/resources/img/shortcuts/foxtrick.png') !important;
 }
 
+/* radio tweaks */
+html[dir="rtl"] .scContainer ul{
+	text-align: right;
+}
+html[dir="ltr"] .scContainer ul{
+	text-align: left;
+}
+.scContainer ul.ft-pop > li {
+	white-space: normal;
+}
+.scContainer ul{
+	width: 200px;
+}
+
+/*non supporter ads moved left to make space for 2 ft icons */
 html[dir="ltr"] #mediasports .mediasports {
 	margin-right: 160px  !important;
 }
