preferences.js/.css Added simple way to create sub-settings that are automatically hidden when the "parent" is disabled. Simply provide an array as option. array[0] will toggle array[1] to array[n]. Allows for nested groups.
@see embed-media.js for an example.

Todo: 
- Allow RADIO_OPTIONS as childs
- Allow OPTION_TEXTS as childs

git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8061 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -11,6 +11,13 @@ ul
 	padding: 0;
 }
 
+ul li ul
+{
+	list-style-type: none;
+	margin: 0px 0px 5px 20px;
+	padding: 5px;
+}
+
 h3
 {
 	margin: 5px 0 0;
