rapidid: simple skin fix if space not sufficient
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8072 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/rapidid.css
+++ b/content/resources/css/rapidid.css
@@ -5,3 +5,5 @@ html[data-theme="simple"] #ft_rapidid { margin-top: 20px; margin-left: 5px; }
 
 html[data-theme="simple"] #ft_rapidid_form { font-size: 1.1em; }
 html[data-theme="simple"] #ft_rapidid_container { font-size: 100%; }
+
+html[data-theme="simple"] #ft_rapidid_form { z-index: 999; position: relative; bottom: 10px; background-color: white;}
