extra-shortcuts: non-sup fixed
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8156 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/extra-shortcuts.css
+++ b/content/resources/css/extra-shortcuts.css
@@ -26,16 +26,20 @@
 }
 
 /* radio tweaks */
-html[dir="rtl"] .scContainer ul{
+html[dir="rtl"] .scContainer ul,
+html[dir="rtl"] .scContainerNoSupporter ul{
 	text-align: right;
 }
-html[dir="ltr"] .scContainer ul{
+html[dir="ltr"] .scContainer ul,
+html[dir="ltr"] .scContainerNoSupporter ul{
 	text-align: left;
 }
-.scContainer ul.ft-pop > li {
+.scContainer ul.ft-pop > li,
+.scContainerNoSupporter ul.ft-pop > li {
 	white-space: normal;
 }
-.scContainer ul{
+.scContainer ul,
+.scContainerNoSupporter ul{
 	width: 200px;
 }
 
