--- a/content/resources/css/extra-shortcuts-space.css
+++ b/content/resources/css/extra-shortcuts-space.css
@@ -1,7 +1,13 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
-#scSettingsLink{display:none;}
-div#shortcuts, div#shortcuts div.scContainer {width: 324px !important;}
+#scSettingsLink 
+{display:none;}
+
+div#shortcuts, 
+div#shortcuts div.scContainer, 
+div#shortcutsNoSupporter, 
+div#shortcutsNoSupporter div.scContainerNoSupporter 
+{width: 324px !important;}
 
 html[data-theme="standard"] #ticker, html[data-theme="standard"] #ticker div {
 	width: 400px !important;
