@0.8: extra-shortcuts non-sup fix. radios still need some update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.8@8157 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/extra-shortcuts.css
+++ b/content/resources/css/extra-shortcuts.css
@@ -25,12 +25,30 @@
 	background-image: url('chrome://foxtrick/content/resources/img/shortcuts/foxtrick.png') !important;
 }
 
-html[dir="ltr"] #mediasports .mediasports {
-        margin-right: 160px  !important;
+/* radio tweaks */
+html[dir="rtl"] .scContainer ul,
+html[dir="rtl"] .scContainerNoSupporter ul{
+	text-align: right;
+}
+html[dir="ltr"] .scContainer ul,
+html[dir="ltr"] .scContainerNoSupporter ul{
+	text-align: left;
+}
+.scContainer ul.ft-pop > li,
+.scContainerNoSupporter ul.ft-pop > li {
+	white-space: normal;
+}
+.scContainer ul,
+.scContainerNoSupporter ul{
+	width: 200px;
 }
 
+/*non supporter ads moved left to make space for 2 ft icons */
+html[dir="ltr"] #mediasports .mediasports {
+	margin-right: 160px  !important;
+}
 html[dir="rtl"] #mediasports .mediasports {
-        margin-left: 160px  !important;
+	margin-left: 160px  !important;
 }
 
 }
