--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -227,3 +227,7 @@ html[data-theme="simple"] #ctl00_ctl00_CPContent_CPMain_UpdatePanelLiveLeagueTab
 #ft-monitor-sidebar-box {
 	overflow: hidden;
 }
+
+#ft_versionInfo {
+	cursor: pointer;
+}
