popup-links.css : .myht1 a { white-space: nowrap}
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8227 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/popup-links.css
+++ b/content/resources/css/popup-links.css
@@ -5,6 +5,10 @@
 	display:inline;
 }
 
+.myht1  a{
+	white-space: nowrap;
+}
+
 #ctl00_ctl00_CPContent_CPMain_repLeagueTable td .myht1 {
 	display:block;
 }
