--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -231,3 +231,7 @@ html[data-theme="simple"] #ctl00_ctl00_CPContent_CPMain_UpdatePanelLiveLeagueTab
 #ft_versionInfo {
 	cursor: pointer;
 }
+
+.ft-nowrap {
+	white-space: nowrap;
+}
