feature highlight: adjusted match order interface stuff somewhat
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8232 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-order.css
+++ b/content/resources/css/match-order.css
@@ -18,7 +18,7 @@ html[dir="ltr"] .playedOther, html[dir="ltr"] .playedSecondLast {
 
 
 
-#swap_positions {
+#ft_swap_positions {
 	background-color: #3f7137; 
 	float: left; 
 	margin-left: 20px; 
